style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap');

* {
    margin: 0;
    padding: 0;
}


body {
    background-color:beige;
    font-family: 'Open Sans';
    color: black;
    margin: 0%;
}

h1,h2,h3 {
    font-family: 'Open Sans';
    margin: 0%;
}

.header {
    background: cover no-repeat;;
}

img{
    height: 20%;
    width: 20%;
    background-size: cover;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

/* navigation links*/


#main > h2 {
    margin: 0;
    position: absolute;
    bottom: 50%;
    left: 50%;
}

a {
    color: black;
}


.lashes {
    background-image: url('./images/nails\ 3.jpeg');
    background-size: cover;
    background-position: center;
    text-align: center;
    width: 15%;
    height: 150px;
    overflow: hidden;
    display: block;
    position: relative;
    margin: 200px 0px 0px 200px;
    font-weight: bold;
    border-radius: 25px;
}

.lashes:hover {
    font-size: 18px;
}

.text-center {
    text-align: center;
}
.about {
    background-image: url('./images/beauty-background.webp');
    background-size: cover;
    background-position: center;
    text-align: center;
    width: 15%;
    height: 150px;
    overflow: hidden;
    display: block;
    position: relative;
    margin: 200px 0px 10px 200px;
    font-weight: bold;
    border-radius: 25px;
}

.about:hover {
    font-size: 18px;
}

.gallery {
    background-image: url('./images/lashes\ 2.jpeg');
    text-decoration: underline;
    background-size: cover;
    background-position: center;
    text-align: center;
    width: 15%;
    height: 150px;
    overflow: hidden;
    display: block;
    margin: 200px 0px 0px 200px;
    position: relative;
    font-weight: bold;
    border-radius: 25px;
}

.gallery:hover {
    font-size: 18px;
}

div {
    float: left;
    padding: 0.2%;
    margin-bottom: 100px;
}

/* services */

div > h2 {
        padding: 5px;
}

#lashes {
   margin-top: 110px;
   padding-bottom: 10rem;
   margin-right: 50px;
   
}

#nails {
    margin-top: 55px;
    padding: 60px;
}

#waxing {
    margin-top: 50px;
    padding: 60px
}

#spa {
    margin-top: 50px;
    padding: 60px;
}



/* about-us*/

.about-us > h2 {
    text-decoration: underline;
    text-align: center;
    top: 35%;
    left: 45%;
    position: absolute;
    margin-right: -50%;
    padding: 20px;
}

ul {
    list-style-type: none;
}

.description > p {
    font-size: 20px;
    text-align: center;
    margin-top: 100px;
    font-style: italic;
    ;
}

/* gallery */

#images{
    clear: both;
    column-count: 2;
    column-gap: 1px;

}

#images > img {
    width: 100%;
    
}




/* map */

#find-me {
    height: 300%;
    width: 100%;
    margin-bottom: 190px;

}

div > p {
    text-align: left;
    float: left;
}

/* form */
.form {
    width: 100%;
    height: 100%;
    margin: 50px 10px 0px 0px;
    text-align: center;
    border-radius: 20px;
    padding-bottom: 10rem;
    font-size: 20px;
    display: inline-block;
}

form > h3 {
    text-decoration: underline;
    padding: 40px;
    padding-top: 10rem;
}

form > label {
    width: 100%;
    padding: 5px;
    text-align: center;
}


input [type=text], select {
    width: 100%;
    padding: 1px;
    text-align: center;
}



/* footer */

footer {
    background-color: lightgrey ;
    position: fixed;
    width: 100%;
    bottom: 0%;
    height: 25%;
}

footer > #contact {
   margin: 10% 1% 5%;
    font-size: 10px;
    text-align: left;
    float: left;
}

.address {
    margin: 5% 0 1%;
}
.socials {
    text-align: center;
}

.socials > li {
    display: inline;
}

.socials i {
    font-size: 50px;
    padding: 5%;
    color: beige;
}

/* media */

@media screen and (max-width: 980px) {
    .lashes, .about, .gallery {
        margin-top: 80px;
        margin-left: 10px;
        margin-right: 10px;
        min-width: 150px;
        width: 150px;
    }

    #main {
        margin: auto;
        width: 53%;
    }

    .form {
        width: 15%;
        margin-left: 10px;
        margin-right: 10px;
        position: relative;
        display: inline-block;
    }
}

